// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl list credentials should work (default formatting) 1`] = `
"id                                    name                type     data  created             
9da10ba9-0dea-4585-bd8b-845f38f26446  CI test credential  generic  -     02/18/2022, 9:41 PM 
ef46a16d-8cdd-41ab-b862-e32cbda8ec19  CI test credential  generic  -     02/18/2022, 9:34 PM 
5f369ed2-0efc-4f82-a257-9b9678316e67  CI test credential  generic  -     02/18/2022, 9:23 PM 
e2f0269e-aae1-4ee4-ac3a-414c2893d126  CI test credential  generic  -     02/18/2022, 9:20 PM 
ab9630bd-5121-4a28-b88f-49d6b75c5283  CI test credential  generic  -     02/18/2022, 9:14 PM 
492e06fb-a9f3-4f59-9f6f-1131301f2a36  CI test credential  generic  -     02/18/2022, 9:12 PM 
abbed5b2-e7bd-449a-9739-7b1a60f67abf  CI test credential  generic  -     02/16/2022, 11:29 PM
8c3654d7-a786-4b6f-a2a4-fee041aa5912  CI test credential  generic  -     02/16/2022, 11:28 PM
1d6bcec5-5b6b-479f-b900-a7ad50d51b5d  CI test credential  generic  -     02/16/2022, 11:28 PM
6bd64587-4469-4230-b95d-756c0aa03445  CI test credential  generic  -     02/16/2022, 11:28 PM
"
`;

exports[`refactrctl list credentials should work 1`] = `
"id                                    name                type     data  created             
9da10ba9-0dea-4585-bd8b-845f38f26446  CI test credential  generic  -     02/18/2022, 9:41 PM 
ef46a16d-8cdd-41ab-b862-e32cbda8ec19  CI test credential  generic  -     02/18/2022, 9:34 PM 
5f369ed2-0efc-4f82-a257-9b9678316e67  CI test credential  generic  -     02/18/2022, 9:23 PM 
e2f0269e-aae1-4ee4-ac3a-414c2893d126  CI test credential  generic  -     02/18/2022, 9:20 PM 
ab9630bd-5121-4a28-b88f-49d6b75c5283  CI test credential  generic  -     02/18/2022, 9:14 PM 
492e06fb-a9f3-4f59-9f6f-1131301f2a36  CI test credential  generic  -     02/18/2022, 9:12 PM 
abbed5b2-e7bd-449a-9739-7b1a60f67abf  CI test credential  generic  -     02/16/2022, 11:29 PM
8c3654d7-a786-4b6f-a2a4-fee041aa5912  CI test credential  generic  -     02/16/2022, 11:28 PM
1d6bcec5-5b6b-479f-b900-a7ad50d51b5d  CI test credential  generic  -     02/16/2022, 11:28 PM
6bd64587-4469-4230-b95d-756c0aa03445  CI test credential  generic  -     02/16/2022, 11:28 PM
"
`;

exports[`refactrctl list credentials should work 2`] = `
"[
    {
        \\"_id\\": \\"6210128855de2608f532fdb7\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:41:28.097Z\\",
        \\"id\\": \\"9da10ba9-0dea-4585-bd8b-845f38f26446\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"621010c8f3d04e6b6699e8aa\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:34:00.929Z\\",
        \\"id\\": \\"ef46a16d-8cdd-41ab-b862-e32cbda8ec19\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62100e3ef3d04e5e6c99e8a3\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:23:10.574Z\\",
        \\"id\\": \\"5f369ed2-0efc-4f82-a257-9b9678316e67\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62100db2f3d04e628099e89c\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:20:50.376Z\\",
        \\"id\\": \\"e2f0269e-aae1-4ee4-ac3a-414c2893d126\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62100c4155de26fa6032fd92\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:14:41.312Z\\",
        \\"id\\": \\"ab9630bd-5121-4a28-b88f-49d6b75c5283\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"62100ba355de2667af32fd8c\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-18T21:12:03.034Z\\",
        \\"id\\": \\"492e06fb-a9f3-4f59-9f6f-1131301f2a36\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"620d88cb55de26402332fd8b\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-16T23:29:15.486Z\\",
        \\"id\\": \\"abbed5b2-e7bd-449a-9739-7b1a60f67abf\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"620d88a3f3d04e797199e875\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-16T23:28:35.871Z\\",
        \\"id\\": \\"8c3654d7-a786-4b6f-a2a4-fee041aa5912\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"620d88a2f3d04ef5d799e872\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-16T23:28:34.330Z\\",
        \\"id\\": \\"1d6bcec5-5b6b-479f-b900-a7ad50d51b5d\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    },
    {
        \\"_id\\": \\"620d889ef3d04e3b5399e86e\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-02-16T23:28:30.432Z\\",
        \\"id\\": \\"6bd64587-4469-4230-b95d-756c0aa03445\\",
        \\"name\\": \\"CI test credential\\",
        \\"type\\": \\"generic\\"
    }
]
"
`;

exports[`refactrctl list credentials should work 3`] = `
"-
    _id: 6210128855de2608f532fdb7
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:41:28.097Z'
    id: 9da10ba9-0dea-4585-bd8b-845f38f26446
    name: CI test credential
    type: generic
-
    _id: 621010c8f3d04e6b6699e8aa
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:34:00.929Z'
    id: ef46a16d-8cdd-41ab-b862-e32cbda8ec19
    name: CI test credential
    type: generic
-
    _id: 62100e3ef3d04e5e6c99e8a3
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:23:10.574Z'
    id: 5f369ed2-0efc-4f82-a257-9b9678316e67
    name: CI test credential
    type: generic
-
    _id: 62100db2f3d04e628099e89c
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:20:50.376Z'
    id: e2f0269e-aae1-4ee4-ac3a-414c2893d126
    name: CI test credential
    type: generic
-
    _id: 62100c4155de26fa6032fd92
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:14:41.312Z'
    id: ab9630bd-5121-4a28-b88f-49d6b75c5283
    name: CI test credential
    type: generic
-
    _id: 62100ba355de2667af32fd8c
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-18T21:12:03.034Z'
    id: 492e06fb-a9f3-4f59-9f6f-1131301f2a36
    name: CI test credential
    type: generic
-
    _id: 620d88cb55de26402332fd8b
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-16T23:29:15.486Z'
    id: abbed5b2-e7bd-449a-9739-7b1a60f67abf
    name: CI test credential
    type: generic
-
    _id: 620d88a3f3d04e797199e875
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-16T23:28:35.871Z'
    id: 8c3654d7-a786-4b6f-a2a4-fee041aa5912
    name: CI test credential
    type: generic
-
    _id: 620d88a2f3d04ef5d799e872
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-16T23:28:34.330Z'
    id: 1d6bcec5-5b6b-479f-b900-a7ad50d51b5d
    name: CI test credential
    type: generic
-
    _id: 620d889ef3d04e3b5399e86e
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-02-16T23:28:30.432Z'
    id: 6bd64587-4469-4230-b95d-756c0aa03445
    name: CI test credential
    type: generic

"
`;

exports[`refactrctl list credentials throws on missing arguments 1`] = `
"refactrctl credentials [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of project containing the credentials  [string] [required]
      --type  [string] [choices: \\"api_token\\", \\"aws_access_key\\", \\"azure_service_principal\\", \\"bearer_token\\", \\"generic\\", \\"ssh_key\\", \\"username_password\\", \\"vault_app_role\\", \\"google_service_account\\"]
      --sort        Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list jobs should work (default formatting) 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 1`] = `
"_id                       name                      enabled  trigger_type  created            
61ccca11d42b9be6898365e0  How Do We Know It Works?  Yes      manual        12/29/2021, 8:50 PM
"
`;

exports[`refactrctl list jobs should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccca11d42b9be6898365e0\\",
        \\"webhook\\": {
            \\"ip_whitelist\\": []
        },
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:50:25.094Z\\",
        \\"disable_on_failure\\": false,
        \\"enabled\\": true,
        \\"pipeline_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"pipeline_revision_id\\": \\"61ccc95a8997cfeb71742855\\",
        \\"name\\": \\"How Do We Know It Works?\\",
        \\"trigger_type\\": \\"manual\\",
        \\"suppress_vars\\": false,
        \\"suppress_outputs\\": false,
        \\"suppress_events\\": false,
        \\"last_run\\": \\"2022-02-18T21:42:00.829Z\\",
        \\"last_status\\": \\"Succeeded\\"
    }
]
"
`;

exports[`refactrctl list jobs should work 3`] = `
"-
    _id: 61ccca11d42b9be6898365e0
    webhook:
        ip_whitelist: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:50:25.094Z'
    disable_on_failure: false
    enabled: true
    pipeline_id: 61ccc379d42b9b0f518365db
    pipeline_revision_id: 61ccc95a8997cfeb71742855
    name: How Do We Know It Works?
    trigger_type: manual
    suppress_vars: false
    suppress_outputs: false
    suppress_events: false
    last_run: '2022-02-18T21:42:00.829Z'
    last_status: Succeeded

"
`;

exports[`refactrctl list jobs throws on missing arguments 1`] = `
"refactrctl jobs [options]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the jobs  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl list organizations should work (default formatting) 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 1`] = `
"_id                       name     contact_name      contact_email              created            
61cc93942529b6ec9681e4e2  CLI e2e  Victoria Drake    victoria.drake@sophos.com  12/29/2021, 4:57 PM
5f9f2d08e2f1bb2436e6f5b0  Refactr  Anthony Rowlands  anthony@refactr.it         10/10/2020, 7:07 AM
"
`;

exports[`refactrctl list organizations should work 2`] = `
"[
    {
        \\"_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"address\\": \\"123 Main St.\\",
        \\"city\\": \\"New York\\",
        \\"state\\": \\"NY\\",
        \\"zip\\": \\"12345\\",
        \\"contact_name\\": \\"Victoria Drake\\",
        \\"contact_email\\": \\"victoria.drake@sophos.com\\",
        \\"name\\": \\"CLI e2e\\",
        \\"created\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"modified\\": \\"2021-12-29T16:57:56.369Z\\",
        \\"plan\\": \\"starter\\",
        \\"plan_quotas\\": {
            \\"total_credits\\": 25,
            \\"project_count\\": 10,
            \\"user_count\\": 15,
            \\"agent_count\\": 10,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        }
    },
    {
        \\"_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"name\\": \\"Refactr\\",
        \\"created\\": \\"2020-10-10T07:07:53.294Z\\",
        \\"modified\\": \\"2020-11-01T23:15:21.605Z\\",
        \\"contact_email\\": \\"anthony@refactr.it\\",
        \\"contact_name\\": \\"Anthony Rowlands\\",
        \\"city\\": \\"Seattle\\",
        \\"state\\": \\"WA\\",
        \\"zip\\": \\"12345\\",
        \\"plan\\": \\"admin\\",
        \\"plan_quotas\\": {
            \\"project_count\\": -1,
            \\"user_count\\": -1,
            \\"agent_count\\": -1,
            \\"run_minutes\\": -1,
            \\"support_hours\\": 0
        },
        \\"address\\": \\"123 Main St.\\",
        \\"image_id\\": \\"6036851a545c5e5481871c88\\",
        \\"capabilities\\": {
            \\"publish_catalogs\\": true
        },
        \\"public\\": true
    }
]
"
`;

exports[`refactrctl list organizations should work 3`] = `
"-
    _id: 61cc93942529b6ec9681e4e2
    address: 123 Main St.
    city: New York
    state: NY
    zip: '12345'
    contact_name: Victoria Drake
    contact_email: victoria.drake@sophos.com
    name: CLI e2e
    created: '2021-12-29T16:57:56.369Z'
    modified: '2021-12-29T16:57:56.369Z'
    plan: starter
    plan_quotas:
        total_credits: 25
        project_count: 10
        user_count: 15
        agent_count: 10
        run_minutes: -1
        support_hours: 0
-
    _id: 5f9f2d08e2f1bb2436e6f5b0
    name: Refactr
    created: '2020-10-10T07:07:53.294Z'
    modified: '2020-11-01T23:15:21.605Z'
    contact_email: anthony@refactr.it
    contact_name: Anthony Rowlands
    city: Seattle
    state: WA
    zip: '12345'
    plan: admin
    plan_quotas:
        project_count: -1
        user_count: -1
        agent_count: -1
        run_minutes: -1
        support_hours: 0
    address: 123 Main St.
    image_id: 6036851a545c5e5481871c88
    capabilities:
        publish_catalogs: true
    public: true

"
`;

exports[`refactrctl list pipeline-revisions throws on missing arguments 1`] = `
"refactrctl pipeline-revisions [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the project containing the pipeline revision  [string] [required]
      --pipeline-id  ID of the pipeline containing the pipeline revision  [string] [required]
      --limit  [number]
      --offset  [number]

Missing required arguments: project-id, pipeline-id
"
`;

exports[`refactrctl list pipelines should work 1`] = `
"_id                       organization_id           project_id                name                          step_count  revision_count  created            
61e72f74597da5d29cac3c49  61cc93942529b6ec9681e4e2  61ccbe03d42b9bdcc88365d8  Practical                     0           1               01/18/2022, 9:21 PM
61ccc379d42b9b0f518365db  61cc93942529b6ec9681e4e2  61ccbe03d42b9bdcc88365d8  The Answer is Always Testing  1           3               12/29/2021, 8:22 PM
"
`;

exports[`refactrctl list pipelines should work 2`] = `
"[
    {
        \\"_id\\": \\"61e72f74597da5d29cac3c49\\",
        \\"feature_tags\\": [],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2022-01-18T21:21:56.247Z\\",
        \\"modified\\": \\"2022-01-18T21:21:56.247Z\\",
        \\"step_count\\": 0,
        \\"revision_count\\": 1,
        \\"name\\": \\"Practical\\"
    },
    {
        \\"_id\\": \\"61ccc379d42b9b0f518365db\\",
        \\"feature_tags\\": [],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"project_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"created\\": \\"2021-12-29T20:22:17.026Z\\",
        \\"modified\\": \\"2021-12-29T20:47:22.071Z\\",
        \\"step_count\\": 1,
        \\"revision_count\\": 3,
        \\"name\\": \\"The Answer is Always Testing\\",
        \\"summary\\": \\"Pipeline for dynamic CI tests.\\"
    }
]
"
`;

exports[`refactrctl list pipelines should work 3`] = `
"-
    _id: 61e72f74597da5d29cac3c49
    feature_tags: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2022-01-18T21:21:56.247Z'
    modified: '2022-01-18T21:21:56.247Z'
    step_count: 0
    revision_count: 1
    name: Practical
-
    _id: 61ccc379d42b9b0f518365db
    feature_tags: []
    organization_id: 61cc93942529b6ec9681e4e2
    project_id: 61ccbe03d42b9bdcc88365d8
    created: '2021-12-29T20:22:17.026Z'
    modified: '2021-12-29T20:47:22.071Z'
    step_count: 1
    revision_count: 3
    name: The Answer is Always Testing
    summary: Pipeline for dynamic CI tests.

"
`;

exports[`refactrctl list pipelines throws on missing arguments 1`] = `
"refactrctl list pipelines

List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the pipelines  [string] [required]
      --sort        Sort order  [choices: \\"modified_asc\\", \\"modified_desc\\", \\"name_asc\\", \\"name_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list projects should work 1`] = `
"_id                       name               pipeline_count  organization_id           created             
61ccbe03d42b9bdcc88365d8  CRUD Testing       2               61cc93942529b6ec9681e4e2  12/29/2021, 7:58 PM 
617711bbda9b615a36917ef2  Dan Testing        5               5f9f2d08e2f1bb2436e6f5b0  10/25/2021, 8:21 PM 
5fa4dba223b4e0703b95c465  Full Kitchen Sink  41              5f9f2d08e2f1bb2436e6f5b0  11/06/2020, 5:14 AM 
5f9f3b02233d0b9e290b3122  Scratch            59              5f9f2d08e2f1bb2436e6f5b0  11/01/2020, 10:47 PM
607f19bd98a5b821d3ca5f13  Runner Dog Food    8               5f9f2d08e2f1bb2436e6f5b0  04/20/2021, 6:13 PM 
6202e247f2b3eb9542b9c466  Carlos Testing     1               5f9f2d08e2f1bb2436e6f5b0  02/08/2022, 9:36 PM 
61f99a75597da55553ac3c8d  Duck Scans         3               5f9f2d08e2f1bb2436e6f5b0  02/01/2022, 8:39 PM 
61fd8937df32e924f68eed35  Hello World        0               5f9f2d08e2f1bb2436e6f5b0  02/04/2022, 8:14 PM 
60080aae44a4547e8423894b  ABC                2               5f9f2d08e2f1bb2436e6f5b0  01/20/2021, 10:49 AM
61e9acd3597da59758ac3c87  CIS Demo 1-20-22   1               5f9f2d08e2f1bb2436e6f5b0  01/20/2022, 6:41 PM 
"
`;

exports[`refactrctl list projects should work 2`] = `
"[
    {
        \\"_id\\": \\"61ccbe03d42b9bdcc88365d8\\",
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:58:59.813Z\\",
        \\"modified\\": \\"2022-02-18T21:41:34.575Z\\",
        \\"pipeline_count\\": 2,
        \\"name\\": \\"CRUD Testing\\"
    },
    {
        \\"_id\\": \\"617711bbda9b615a36917ef2\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-10-25T20:21:15.612Z\\",
        \\"modified\\": \\"2022-02-18T21:36:14.694Z\\",
        \\"pipeline_count\\": 5,
        \\"name\\": \\"Dan Testing\\",
        \\"icon_name\\": \\"pills\\"
    },
    {
        \\"_id\\": \\"5fa4dba223b4e0703b95c465\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-06T05:14:10.990Z\\",
        \\"modified\\": \\"2022-02-16T17:10:25.818Z\\",
        \\"pipeline_count\\": 41,
        \\"name\\": \\"Full Kitchen Sink\\",
        \\"image_id\\": \\"5feeecacb5297d642e1938da\\"
    },
    {
        \\"_id\\": \\"5f9f3b02233d0b9e290b3122\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2020-11-01T22:47:30.770Z\\",
        \\"modified\\": \\"2022-02-16T16:49:11.179Z\\",
        \\"pipeline_count\\": 59,
        \\"name\\": \\"Scratch\\",
        \\"image_id\\": \\"600b6b5c25b0b52703ea3f0c\\"
    },
    {
        \\"_id\\": \\"607f19bd98a5b821d3ca5f13\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-04-20T18:13:17.407Z\\",
        \\"modified\\": \\"2022-02-15T17:57:18.451Z\\",
        \\"pipeline_count\\": 8,
        \\"name\\": \\"Runner Dog Food\\",
        \\"image_id\\": \\"607f19d896b0a463afd1ccb5\\"
    },
    {
        \\"_id\\": \\"6202e247f2b3eb9542b9c466\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-08T21:36:07.354Z\\",
        \\"modified\\": \\"2022-02-11T09:00:45.647Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"Carlos Testing\\"
    },
    {
        \\"_id\\": \\"61f99a75597da55553ac3c8d\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-01T20:39:17.776Z\\",
        \\"modified\\": \\"2022-02-09T22:21:03.342Z\\",
        \\"pipeline_count\\": 3,
        \\"name\\": \\"Duck Scans\\",
        \\"image_id\\": \\"61f99b4c068d9107f4019c53\\"
    },
    {
        \\"_id\\": \\"61fd8937df32e924f68eed35\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-02-04T20:14:47.422Z\\",
        \\"modified\\": \\"2022-02-04T20:14:47.422Z\\",
        \\"pipeline_count\\": 0,
        \\"name\\": \\"Hello World\\"
    },
    {
        \\"_id\\": \\"60080aae44a4547e8423894b\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2021-01-20T10:49:18.861Z\\",
        \\"modified\\": \\"2022-02-03T14:45:33.929Z\\",
        \\"pipeline_count\\": 2,
        \\"name\\": \\"ABC\\"
    },
    {
        \\"_id\\": \\"61e9acd3597da59758ac3c87\\",
        \\"organization_id\\": \\"5f9f2d08e2f1bb2436e6f5b0\\",
        \\"created\\": \\"2022-01-20T18:41:23.048Z\\",
        \\"modified\\": \\"2022-01-20T18:43:13.827Z\\",
        \\"pipeline_count\\": 1,
        \\"name\\": \\"CIS Demo 1-20-22\\"
    }
]
"
`;

exports[`refactrctl list projects should work 3`] = `
"-
    _id: 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:58:59.813Z'
    modified: '2022-02-18T21:41:34.575Z'
    pipeline_count: 2
    name: CRUD Testing
-
    _id: 617711bbda9b615a36917ef2
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-10-25T20:21:15.612Z'
    modified: '2022-02-18T21:36:14.694Z'
    pipeline_count: 5
    name: Dan Testing
    icon_name: pills
-
    _id: 5fa4dba223b4e0703b95c465
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-06T05:14:10.990Z'
    modified: '2022-02-16T17:10:25.818Z'
    pipeline_count: 41
    name: Full Kitchen Sink
    image_id: 5feeecacb5297d642e1938da
-
    _id: 5f9f3b02233d0b9e290b3122
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2020-11-01T22:47:30.770Z'
    modified: '2022-02-16T16:49:11.179Z'
    pipeline_count: 59
    name: Scratch
    image_id: 600b6b5c25b0b52703ea3f0c
-
    _id: 607f19bd98a5b821d3ca5f13
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-04-20T18:13:17.407Z'
    modified: '2022-02-15T17:57:18.451Z'
    pipeline_count: 8
    name: Runner Dog Food
    image_id: 607f19d896b0a463afd1ccb5
-
    _id: 6202e247f2b3eb9542b9c466
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-08T21:36:07.354Z'
    modified: '2022-02-11T09:00:45.647Z'
    pipeline_count: 1
    name: Carlos Testing
-
    _id: 61f99a75597da55553ac3c8d
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-01T20:39:17.776Z'
    modified: '2022-02-09T22:21:03.342Z'
    pipeline_count: 3
    name: Duck Scans
    image_id: 61f99b4c068d9107f4019c53
-
    _id: 61fd8937df32e924f68eed35
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-02-04T20:14:47.422Z'
    modified: '2022-02-04T20:14:47.422Z'
    pipeline_count: 0
    name: Hello World
-
    _id: 60080aae44a4547e8423894b
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2021-01-20T10:49:18.861Z'
    modified: '2022-02-03T14:45:33.929Z'
    pipeline_count: 2
    name: ABC
-
    _id: 61e9acd3597da59758ac3c87
    organization_id: 5f9f2d08e2f1bb2436e6f5b0
    created: '2022-01-20T18:41:23.048Z'
    modified: '2022-01-20T18:43:13.827Z'
    pipeline_count: 1
    name: CIS Demo 1-20-22

"
`;

exports[`refactrctl list runners should work (by project) 1`] = `
"_id                       organization_id           name            host_type  machine_type  version  started  heartbeat  status   idle_since  stop_pending  created            
61ccb65bd42b9b66fa8365d2  61cc93942529b6ec9681e4e2  CI Test Runner  -          -             -        -        -          Running  -           -             12/29/2021, 7:26 PM
"
`;

exports[`refactrctl list runners should work (by project) 2`] = `
"[
    {
        \\"_id\\": \\"61ccb65bd42b9b66fa8365d2\\",
        \\"project_ids\\": [
            \\"61cca573d42b9b46428365c8\\",
            \\"61ccbe03d42b9bdcc88365d8\\"
        ],
        \\"organization_id\\": \\"61cc93942529b6ec9681e4e2\\",
        \\"created\\": \\"2021-12-29T19:26:19.277Z\\",
        \\"name\\": \\"CI Test Runner\\",
        \\"type\\": \\"aws_vm_centos8\\",
        \\"hosted\\": true,
        \\"status\\": \\"Running\\",
        \\"idle\\": true,
        \\"agent_version\\": \\"1.106.4\\",
        \\"last_run\\": \\"2022-02-18T21:42:04.442Z\\"
    }
]
"
`;

exports[`refactrctl list runners should work (by project) 3`] = `
"-
    _id: 61ccb65bd42b9b66fa8365d2
    project_ids:
        - 61cca573d42b9b46428365c8
        - 61ccbe03d42b9bdcc88365d8
    organization_id: 61cc93942529b6ec9681e4e2
    created: '2021-12-29T19:26:19.277Z'
    name: CI Test Runner
    type: aws_vm_centos8
    hosted: true
    status: Running
    idle: true
    agent_version: 1.106.4
    last_run: '2022-02-18T21:42:04.442Z'

"
`;

exports[`refactrctl list runners throws on missing arguments 1`] = `
"refactrctl list runners

List runners for an organization or a project

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter           Filter output using JsonPath  [string]
      --address          Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token       Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help             Show help  [boolean]
      --project-id       ID of the project containing the runners  [string]
      --organization-id  ID of the organization containing the runners  [string]

Missing required argument: either organization-id or project-id
"
`;

exports[`refactrctl list runs throws on missing arguments 1`] = `
"refactrctl runs [options]

Options:
      --version      Show version number  [boolean]
  -v, --verbose      Print detailed output  [boolean]
      --format       Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter       Filter output using JsonPath  [string]
      --address      Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token   Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help         Show help  [boolean]
      --project-id   ID of the organization containing the runs  [string] [required]
      --pipeline-id  ID of a pipeline used to filter the runs  [string]
      --job-id       ID of a job used to filter the runs  [string]
      --sort         Sort order  [string] [choices: \\"created_asc\\", \\"created_desc\\"]
      --limit  [number]
      --offset  [number]

Missing required argument: project-id
"
`;

exports[`refactrctl list throws on missing subcommand 1`] = `
"Usage: refactrctl list <command> [options]

Commands:
  refactrctl list credentials         List credentials from a project
  refactrctl list projects            List projects from an organization
  refactrctl list organizations       List organizations to which authenticated user belongs
  refactrctl list jobs                List jobs for a project
  refactrctl list runs                List runs for a project
  refactrctl list pipeline-revisions  List pipeline revisions for a pipeline
  refactrctl list runners             List runners for an organization or a project
  refactrctl list pipelines           List pipelines for a project

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --filter      Filter output using JsonPath  [string]
      --address     Address of the Sophos Factory API server  [string] [default: FACTORY_ADDRESS environment variable if set, otherwise https://api.refactr.it/v1]
      --auth-token  Authentication token  [string] [default: FACTORY_AUTH_TOKEN environment variable]
      --help        Show help  [boolean]

Command must be specified
"
`;
